--- a/shockwave.html
+++ b/shockwave.html
@@ -35,86 +35,131 @@
 	<script src="assets/js/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-	<header class="top-banner no-padding" style="background: url(assets/img/powershape/bannerhome.jpg)no-repeat;background-size:cover;">
+	<header class="top-banner no-padding hidden-xs hidden-sm" style="background: url(assets/img/powershape/bannerhome.jpg) -25px -50px no-repeat; background-color: transparent; top: 100; width: 100%; z-index: 0; height: 300px; background-size: calc(100% + 50px);">
         <div class="container">
         	<div class="row">
         		<div class="col-lg-12">
-        			<a href="" class="btn btn-primary btn-verde">agendar agora</a>
+        			<a href="#contato" class="btn btn-verde">agendar agora</a>
         		</div>
         	</div>
         	<div class="clear"></div>
         </div>
     </header>
-	<section class="sessao-1">
+    <header class="top-banner hidden-lg hidden-md">
+    	<div class="container">
+        	<div class="row">
+        		<div class="col-lg-12">
+					<img src="assets/img/powershape/power.png">
+        		</div>
+        	</div>
+        </div>		
+    </header>
+	<section class="shock-sessao-1">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<h2>Elimine a celulite, a gordura localizada<br>
-					e a flacidez de uma vez só!</h2>
+					<h2>Todos contra a celulite!</h2>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="sessao-2">
+	<section class="shock-sessao-2">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12">
-					<h2>O que é o Powershape</h2>
-					<p>É um equipamento que associa três tecnologias: sistema de susção, luz de LED e radiofreqência. Ativa a circulação sanguínea, estima a produção de colágeno e fibras elásticas, dá um efeito tensor na pela e diminui as células de gordura promovendo a redução de medidas.</p>
+				<div class="col-lg-12 myDiv">
+					<h2>Conheça o SHOCK WAVE</h2>
+					<p>Imagine o que há de mais avançado no campo tecnológico aplicado a beleza e ao bem-estar. O Shock Wave é uma técnica não-invasiva que usa um sistema eletromagnético para combater a celulite, a gordurinha e a flacidez da pele. Por meio de ondas acústicas de alto impacto, o tratamento é capaz de aumentar a liberação de gordura ou triglicerídeos e regenerar o tecido conjuntivo.</p>
 
-					<p>A radiofrequência combinada com laser de baixa energia aquece o tecido com o objetivo de aumentar o metabolismo da gordura e estimular o colágeno, melhorando a aparência da pele e o contorno corporal. O sistema de sucção associado à drenagem por roletes tornam a pele lisa para maior penetração da energia do laser e aumento da circulação sanguínea.</p>
-
-					<h2>Conheça um pouco mais do Powershape</h2>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/_JW_ccdlXLA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<iframe width="590" height="315" src="https://www.youtube.com/embed/_JW_ccdlXLA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="sessao-3 jarallax" style="background: url(assets/img/powershape/fundo-2.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
+	<section class="shock-sessao-3 jarallax" style="background: url(assets/img/powershape/fundo-2.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
 		<div class="container">
-			<div class="row">
+			<div class="row myDiv">
 				<div class="col-lg-12">
 					<h2>O Powershape é indicado para quem busca:</h2>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-4">
+				<div class="col-lg-4 myDiv">
 					<figure>
 						<img src="assets/img/powershape/fig-1.png">
 						<figcaption>Dar um fim à<br> flacides cutânea</figcaption>
 					</figure>
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4 myDiv">
 					<figure>
 						<img src="assets/img/powershape/fig-2.png">
 						<figcaption>Acabar com as<br> gordurinhas localizadas</figcaption>
 					</figure>
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4 myDiv">
 					<figure>
 						<img src="assets/img/powershape/fig-3.png">
 						<figcaption>Redução<br> das celulites</figcaption>
 					</figure>
 				</div>
-				<a href="" class="btn btn-primary btn-verde">quero mais informações</a>
+				<a href="#contato" class="btn btn-verde myDiv">quero mais informações</a>
 			</div>
 		</div>
 	</section>
-	<section class="sessao-3 jarallax" style="background: url(assets/img/powershape/fundo-3.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
+	<section class="shock-sessao-4 jarallax" id="contato" style="background: url(assets/img/powershape/fundo-3.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
 		<div class="container">
-			<div class="row">
+			<div class="row myDiv">
 				<div class="col-lg-12">
 					<h2>Agende agora sua avaliação gratuita</h2>
+				</div>
+				<div class="col-lg-6 col-lg-offset-3">
+					<form>
+					  <div class="form-group">
+					    <input type="text" class="form-control" placeholder="Nome">
+					  </div>
+					  <div class="form-group">
+					    <input type="email" class="form-control" placeholder="Email">
+					  </div>
+					  <div class="form-group">
+					    <input type="text" class="form-control" placeholder="Telefone">
+					  </div>
+					  <div class="form-group">
+					    <select class="form-control">
+							<option>Unidade</option>
+						  	<option>Aclimação</option>
+						  	<option>Americana</option>
+							<option>Anália Franco</option>
+							<option>Alphaville - Shopping</option>
+							<option>Brooklin</option>
+							<option>Butantã</option>
+							<option>Campinas Cambuí</option>
+							<option>Chácara Santo Antônio</option>
+							<option>Campo Belo</option>
+							<option>Granja Viana</option>
+							<option>Guarulhos</option>
+							<option>Indaiatuba</option>
+							<option>Ipiranga</option>
+							<option>Jardim da Saúde</option>
+							<option>Lapa</option>
+							<option>Paraíso</option>
+							<option>Pamplona</option>
+							<option>Pinheiros</option>
+							<option>Tatuapé</option>
+							<option>Morumbi</option>
+							<option>Santos</option>
+						</select>
+					  </div>
+					  <button type="submit" class="btn btn-verde">Agendar Agora</button>
+					</form>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<footer>
+	<footer class="shock-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<p> © Tony Esper 2018 - Todos os direitos reservados.</p>
+					<p> © Copyright 2018 - Onodera Estética</p>
 				</div>
 			</div>
 		</div>
@@ -122,8 +167,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script> 
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/videoplayer.js"></script>
+    <script src="assets/js/jquery.boxloader.min.js"></script> 
     <script src="https://unpkg.com/jarallax@1.9/dist/jarallax.min.js"></script>
     <script src="assets/js/main.js"></script>
 
