--- a/onodepil.html
+++ b/onodepil.html
@@ -35,11 +35,11 @@
 	<script src="assets/js/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-	<header class="top-banner no-padding hidden-xs hidden-sm" style="background: url(assets/img/powershape/fundo.png) -25px -50px no-repeat;height: 52vh;overflow:hidden;background-color: transparent; width: 100%; z-index: 0; background-size: calc(100% + 130px); ">
+	<header class="top-banner no-padding hidden-xs hidden-sm" style="background: url(assets/img/onodepil/fundo.png) -25px -50px no-repeat;height: 52vh;overflow:hidden;background-color: transparent; width: 100%; z-index: 0; background-size: calc(100% + 130px); ">
         <div class="container">
         	<div class="row">
         		<div class="col-lg-12">
-        			<img src="assets/img/powershape/power.png" style="max-width: 100%;height: auto; margin: 0px auto;display: block;">
+        			<img src="assets/img/onodepil/ono.png" style="max-width: 100%;height: auto; margin: 0px auto;display: block;">
         			<a href="#contato" class="btn btn-verde">agendar agora</a>
         		</div>
         	</div>
@@ -50,67 +50,93 @@
     	<div class="container">
         	<div class="row">
         		<div class="col-lg-12">
-					<img src="assets/img/powershape/power.png">
+					<img src="assets/img/onodepil/ono.png">
         		</div>
         	</div>
         </div>		
     </header>
-	<section class="powershape-sessao-1">
+	<section class="ono-sessao-1">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12">
-					<h2>Elimine a celulite, a gordura localizada<br>
-					e a flacidez de uma vez só!</h2>
+				<div class="col-lg-4">
+					<h2>Tratamento<br>Duradouro</h2>
+					<p>Um dos tipos de depilação que requer menos manutenção. Em alguns casos, a manutenção será necessária depois de anos.</p>
+				</div>
+				<div class="col-lg-4">
+					<h2>Sem pelos<br>encravados</h2>
+					<p>A depilação a laser é o tipo mais indicado para quem constantemente tem problemas de cabelos encravados</p>
+				</div>
+				<div class="col-lg-4">
+					<h2>Poucas<br>sessões</h2>
+					<p>Os resultados da OnoDepil vêm rápidp! Geralmente são necessárias apenas 5 sessões para conseguir bons resultados.</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="powershape-sessao-2">
+	<section class="ono-sessao-2">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 myDiv">
-					<h2>O que é o Powershape</h2>
-					<p>É um equipamento que associa três tecnologias: sistema de susção, luz de LED e radiofreqência. Ativa a circulação sanguínea, estima a produção de colágeno e fibras elásticas, dá um efeito tensor na pela e diminui as células de gordura promovendo a redução de medidas.</p>
+					<h2>Como funciona a Depilação a Laser?</h2>
+					<p>O procedimento elimina o pelo porque sua energia, em forma de luz, é atraída e captada pela melanina, pigmento presente na haste do fio e responsável pela sua coloração. Essa energia térmica destrói ou retarda a capacidade de o folículo produzri uma novo fio. Os pelos que não são eliminados na hora crescem lentamente, mais claros e finos. Quanto mais escuro o pelo, melhor o resultado com o laser.</p>
 
-					<p>A radiofrequência combinada com laser de baixa energia aquece o tecido com o objetivo de aumentar o metabolismo da gordura e estimular o colágeno, melhorando a aparência da pele e o contorno corporal. O sistema de sucção associado à drenagem por roletes tornam a pele lisa para maior penetração da energia do laser e aumento da circulação sanguínea.</p>
-
-					<h2>Conheça um pouco mais do Powershape</h2>
-					<iframe width="590" height="315" src="https://www.youtube.com/embed/_JW_ccdlXLA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<iframe width="590" height="315" src="https://www.youtube.com/embed/XyOKp-yrnQw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<div class="clear"></div>
+					<a href="#contato" class="btn btn-verde">agendar agora</a>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="powershape-sessao-3 jarallax" style="background: url(assets/img/powershape/fundo-2.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
+	<section class="ono-sessao-3">
 		<div class="container">
-			<div class="row myDiv">
-				<div class="col-lg-12">
-					<h2>O Powershape é indicado para quem busca:</h2>
-				</div>
-			</div>
 			<div class="row">
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-1.png">
-						<figcaption>Dar um fim à<br> flacides cutânea</figcaption>
-					</figure>
-				</div>
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-2.png">
-						<figcaption>Acabar com as<br> gordurinhas localizadas</figcaption>
-					</figure>
-				</div>
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-3.png">
-						<figcaption>Redução<br> das celulites</figcaption>
-					</figure>
+				<div class="col-lg-12 myDiv">
+					<img src="assets/img/onodepil/icone.png" class="text-center">
+					<h2>O que é Depilação a Laser?</h2>
+					<p>A depilação a laser é o melhor método para acavar com os pelos supérfluos e indesejáveis,
+					de várias regiões do corpo, como por exemplo axilas, pernas, virilha e zona íntina.</p>
 				</div>
 				<a href="#contato" class="btn btn-verde myDiv">quero mais informações</a>
 			</div>
 		</div>
 	</section>
-	<section class="powershape-sessao-4 jarallax" id="contato" style="background: url(assets/img/powershape/fundo-3.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
+	<section class="ono-sessao-5" style="background: url(assets/img/onodepil/fundo-2.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
+		<div class="container">
+			<div class="row">
+				<h2>Quantas sessões são necessárias?</h2>
+				<div class="col-lg-4 myDiv">
+					<figure>
+						<img src="assets/img/onodepil/1-2.png">
+						<figcaption>
+							Nas duas primeiras<br>
+							sessões, o pelo enfraquece
+						</figcaption>
+					</figure>
+				</div>
+				<div class="col-lg-4 myDiv">
+					<figure>
+						<img src="assets/img/onodepil/3-4.png">
+						<figcaption>
+							Na terceira e quarta sessão,<br>
+							os pelos quase desaparecem e o<br>
+							resultado já é visível
+						</figcaption>
+					</figure>
+				</div>
+				<div class="col-lg-4 myDiv">
+					<figure>
+						<img src="assets/img/onodepil/5.png">
+						<figcaption>
+							A quinta sessão, na maioria<br>
+							das mulheres, já apresenta o<br>
+							resultado final
+						</figcaption>
+					</figure>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="ono-sessao-4 jarallax" id="contato" style="background: url(assets/img/powershape/fundo-3.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
 		<div class="container">
 			<div class="row myDiv">
 				<div class="col-lg-12">
@@ -160,7 +186,7 @@
 		</div>
 	</section>
 
-	<footer class="powershape-footer">
+	<footer class="ono-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
