--- a/shockwave.html
+++ b/shockwave.html
@@ -35,10 +35,11 @@
 	<script src="assets/js/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-	<header class="top-banner no-padding hidden-xs hidden-sm" style="background: url(assets/img/powershape/bannerhome.jpg) -25px -50px no-repeat; background-color: transparent; top: 100; width: 100%; z-index: 0; height: 300px; background-size: calc(100% + 50px);">
+	<header class="top-banner no-padding hidden-xs hidden-sm" style="background: url(assets/img/shockwave/fundo.png) -25px -50px no-repeat;height: 52vh;overflow:hidden;background-color: transparent; width: 100%; z-index: 0; background-size: calc(100% + 130px); ">
         <div class="container">
         	<div class="row">
         		<div class="col-lg-12">
+        			<img src="assets/img/shockwave/banner-home.png" style="max-width: 100%;height: auto; margin: 0px auto;display: block;">
         			<a href="#contato" class="btn btn-verde">agendar agora</a>
         		</div>
         	</div>
@@ -49,7 +50,7 @@
     	<div class="container">
         	<div class="row">
         		<div class="col-lg-12">
-					<img src="assets/img/powershape/power.png">
+					<img src="assets/img/shockwave/banner-home.png">
         		</div>
         	</div>
         </div>		
@@ -70,42 +71,32 @@
 					<h2>Conheça o SHOCK WAVE</h2>
 					<p>Imagine o que há de mais avançado no campo tecnológico aplicado a beleza e ao bem-estar. O Shock Wave é uma técnica não-invasiva que usa um sistema eletromagnético para combater a celulite, a gordurinha e a flacidez da pele. Por meio de ondas acústicas de alto impacto, o tratamento é capaz de aumentar a liberação de gordura ou triglicerídeos e regenerar o tecido conjuntivo.</p>
 
-					<iframe width="590" height="315" src="https://www.youtube.com/embed/_JW_ccdlXLA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<iframe width="590" height="315" src="https://www.youtube.com/embed/vIGsmqohPJ8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<div class="clear"></div>
+					<a href="#contato" class="btn btn-verde">agendar agora</a>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="shock-sessao-3 jarallax" style="background: url(assets/img/powershape/fundo-2.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
+	<section class="shock-sessao-3 jarallax" style="background: url(assets/img/shockwave/fundo-2.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
 		<div class="container">
 			<div class="row myDiv">
 				<div class="col-lg-12">
-					<h2>O Powershape é indicado para quem busca:</h2>
+					<div class="boxshock">
+						<h2>O Shock Wave é indicado para quem busca</h2>
+						<ul class="col-lg-6 col-lg-offset-4">
+							<li>Amenizar a celulite</li>
+							<li>Reduzir a gordura localizada</li>
+							<li>Ter uma pele mais firme</li>
+						</ul>
+						<div class="clear"></div>
+					</div>
+					<a href="#contato" class="btn btn-verde">quero mais informações</a>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-1.png">
-						<figcaption>Dar um fim à<br> flacides cutânea</figcaption>
-					</figure>
-				</div>
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-2.png">
-						<figcaption>Acabar com as<br> gordurinhas localizadas</figcaption>
-					</figure>
-				</div>
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-3.png">
-						<figcaption>Redução<br> das celulites</figcaption>
-					</figure>
-				</div>
-				<a href="#contato" class="btn btn-verde myDiv">quero mais informações</a>
 			</div>
 		</div>
 	</section>
-	<section class="shock-sessao-4 jarallax" id="contato" style="background: url(assets/img/powershape/fundo-3.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
+	<section class="shock-sessao-4" id="contato">
 		<div class="container">
 			<div class="row myDiv">
 				<div class="col-lg-12">
