--- a/criofrequencia.html
+++ b/criofrequencia.html
@@ -35,11 +35,11 @@
 	<script src="assets/js/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-	<header class="top-banner no-padding hidden-xs hidden-sm" style="background: url(assets/img/powershape/fundo.png) -25px -50px no-repeat;height: 52vh;overflow:hidden;background-color: transparent; width: 100%; z-index: 0; background-size: calc(100% + 130px); ">
+	<header class="top-banner no-padding hidden-xs hidden-sm" style="background: url(assets/img/criofrequencia/bannerhome.jpg) -25px -50px no-repeat;height: 52vh;overflow:hidden;background-color: transparent; width: 100%; z-index: 0; background-size: calc(100% + 130px); ">
         <div class="container">
         	<div class="row">
         		<div class="col-lg-12">
-        			<img src="assets/img/powershape/power.png" style="max-width: 100%;height: auto; margin: 0px auto;display: block;">
+        			<img src="assets/img/criofrequencia/crio.png" style="max-width: 100%;height: auto; margin: 0px auto;display: block;">
         			<a href="#contato" class="btn btn-verde">agendar agora</a>
         		</div>
         	</div>
@@ -50,67 +50,82 @@
     	<div class="container">
         	<div class="row">
         		<div class="col-lg-12">
-					<img src="assets/img/powershape/power.png">
+					<img src="assets/img/criofrequencia/crio.png">
         		</div>
         	</div>
         </div>		
     </header>
-	<section class="powershape-sessao-1">
+	<section class="crio-sessao-1">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<h2>Elimine a celulite, a gordura localizada<br>
-					e a flacidez de uma vez só!</h2>
+					<h2>Utilize a tecnologia a seu favor!</h2>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="powershape-sessao-2">
+	<section class="crio-sessao-2">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 myDiv">
-					<h2>O que é o Powershape</h2>
-					<p>É um equipamento que associa três tecnologias: sistema de susção, luz de LED e radiofreqência. Ativa a circulação sanguínea, estima a produção de colágeno e fibras elásticas, dá um efeito tensor na pela e diminui as células de gordura promovendo a redução de medidas.</p>
+					<h2>Descubra a Criofrequência</h2>
+					<p>A máquina possui uma ponteira ultracongelada, que esfria a epiderme a menos de 10 graus. As fibras de colágeno se contraem imediatakmente, o que garante o efeito de lifting no corpo. O calor da radiofrequência atinge a pele, retrai o colágeno existente e estimula a formação de novas fibras elásticas. O choque térmico entre o frio e o quente aumenta a eficiência da técnica, trazendo resultados contra a flacidez em menos tempo.</p>
 
-					<p>A radiofrequência combinada com laser de baixa energia aquece o tecido com o objetivo de aumentar o metabolismo da gordura e estimular o colágeno, melhorando a aparência da pele e o contorno corporal. O sistema de sucção associado à drenagem por roletes tornam a pele lisa para maior penetração da energia do laser e aumento da circulação sanguínea.</p>
-
-					<h2>Conheça um pouco mais do Powershape</h2>
-					<iframe width="590" height="315" src="https://www.youtube.com/embed/_JW_ccdlXLA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<iframe width="590" height="315" src="https://www.youtube.com/embed/D7sXiPuVr4o" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<div class="clear"></div>
+					<a href="#contato" class="btn btn-verde">agendar agora</a>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="powershape-sessao-3 jarallax" style="background: url(assets/img/powershape/fundo-2.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
+	<section class="crio-sessao-3">
 		<div class="container">
-			<div class="row myDiv">
-				<div class="col-lg-12">
-					<h2>O Powershape é indicado para quem busca:</h2>
-				</div>
-			</div>
 			<div class="row">
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-1.png">
-						<figcaption>Dar um fim à<br> flacides cutânea</figcaption>
-					</figure>
+				<div class="col-lg-6 myDiv">
+					<div class="box-crio">
+						<h2>Benefícios Corporais</h2>
+						<ul>
+							<li>Reduz a gordura corporal</li>
+							<li>Melhora o aspecto da celulite</li>
+							<li>Reduz a flacidez</li>
+						</ul>
+						<div class="clear"></div>
+					</div>	
 				</div>
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-2.png">
-						<figcaption>Acabar com as<br> gordurinhas localizadas</figcaption>
-					</figure>
-				</div>
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-3.png">
-						<figcaption>Redução<br> das celulites</figcaption>
-					</figure>
+				<div class="col-lg-6 myDiv">
+					<div class="box-crio">
+						<h2>Benefícios Faciais</h2>
+						<ul>
+							<li>Diminui a flacidez</li>
+							<li>Reduz as rugas faciais</li>
+							<li>Ameniza as linhas de expressão</li>
+						</ul>
+						<div class="clear"></div>
+					</div>	
 				</div>
 				<a href="#contato" class="btn btn-verde myDiv">quero mais informações</a>
 			</div>
 		</div>
 	</section>
-	<section class="powershape-sessao-4 jarallax" id="contato" style="background: url(assets/img/powershape/fundo-3.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
+	<section class="crio-sessao-5">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 myDiv">
+					<span>Menos flacidez</span>
+					<h2>+ sorriso</h2>
+				</div>
+				<div class="col-lg-4 myDiv">
+					<span>Menos celulite</span>
+					<h2>+ segurança</h2>
+				</div>
+				<div class="col-lg-4 myDiv">
+					<span>Menos gordura</span>
+					<h2>+ verdade</h2>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="crio-sessao-4 jarallax" id="contato" style="background: url(assets/img/powershape/fundo-3.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
 		<div class="container">
 			<div class="row myDiv">
 				<div class="col-lg-12">
@@ -160,7 +175,7 @@
 		</div>
 	</section>
 
-	<footer class="powershape-footer">
+	<footer class="crio-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
