--- a/trilipo.html
+++ b/trilipo.html
@@ -35,11 +35,11 @@
 	<script src="assets/js/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-	<header class="top-banner no-padding hidden-xs hidden-sm" style="background: url(assets/img/powershape/fundo.png) -25px -50px no-repeat;height: 52vh;overflow:hidden;background-color: transparent; width: 100%; z-index: 0; background-size: calc(100% + 130px); ">
+	<header class="top-banner no-padding hidden-xs hidden-sm" style="background: url(assets/img/trilipo/fundo.png) -25px -50px no-repeat;height: 52vh;overflow:hidden;background-color: transparent; width: 100%; z-index: 0; background-size: calc(100% + 130px); ">
         <div class="container">
         	<div class="row">
         		<div class="col-lg-12">
-        			<img src="assets/img/powershape/power.png" style="max-width: 100%;height: auto; margin: 0px auto;display: block;">
+        			<img src="assets/img/trilipo/trilipo.png" style="max-width: 100%;height: auto; margin: 0px auto;display: block;">
         			<a href="#contato" class="btn btn-verde">agendar agora</a>
         		</div>
         	</div>
@@ -50,67 +50,78 @@
     	<div class="container">
         	<div class="row">
         		<div class="col-lg-12">
-					<img src="assets/img/powershape/power.png">
+					<img src="assets/img/trilipo/trilipo.png">
         		</div>
         	</div>
         </div>		
     </header>
-	<section class="powershape-sessao-1">
+	<section class="trilipo-sessao-1">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<h2>Elimine a celulite, a gordura localizada<br>
-					e a flacidez de uma vez só!</h2>
+					<h2>Diga adeus para as gordurinhas localizadas!</h2>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="powershape-sessao-2">
+	<section class="trilipo-sessao-2">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 myDiv">
-					<h2>O que é o Powershape</h2>
-					<p>É um equipamento que associa três tecnologias: sistema de susção, luz de LED e radiofreqência. Ativa a circulação sanguínea, estima a produção de colágeno e fibras elásticas, dá um efeito tensor na pela e diminui as células de gordura promovendo a redução de medidas.</p>
+					<h2>O que é TRILIPO?</h2>
+					<p>É um tratamento que combina dois tipos diferentes de energias, radiofrequência e ativação muscular dinânima, as quais são emitidas simultaneamente pelos aplicadores dos sistema maximus. A energia DMA do TRILIPO provoca a contração do músculo, aumenta o tônus muscular e a drenagem dos ácidos graxos liberados pelo aquecimento da energia RF do Trilipo.</p>
 
-					<p>A radiofrequência combinada com laser de baixa energia aquece o tecido com o objetivo de aumentar o metabolismo da gordura e estimular o colágeno, melhorando a aparência da pele e o contorno corporal. O sistema de sucção associado à drenagem por roletes tornam a pele lisa para maior penetração da energia do laser e aumento da circulação sanguínea.</p>
-
-					<h2>Conheça um pouco mais do Powershape</h2>
-					<iframe width="590" height="315" src="https://www.youtube.com/embed/_JW_ccdlXLA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<iframe width="590" height="315" src="https://www.youtube.com/embed/K6TKB7hIt4A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<div class="clear"></div>
+					<a href="#contato" class="btn btn-verde">agendar agora</a>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="powershape-sessao-3 jarallax" style="background: url(assets/img/powershape/fundo-2.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
+	<section class="trilipo-sessao-3">
 		<div class="container">
 			<div class="row myDiv">
 				<div class="col-lg-12">
-					<h2>O Powershape é indicado para quem busca:</h2>
+					<div class="boxshock">
+						<h2>O Trilipo é indicado para quem busca</h2>
+						<ul class="col-lg-6 col-lg-offset-4">
+							<li>Redução das celulites</li>
+							<li>Xô gordurinhas localizadas</li>
+							<li>Acabar com a flacidez</li>
+						</ul>
+						<div class="clear"></div>
+					</div>
+					<a href="#contato" class="btn btn-verde">quero mais informações</a>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-1.png">
-						<figcaption>Dar um fim à<br> flacides cutânea</figcaption>
-					</figure>
-				</div>
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-2.png">
-						<figcaption>Acabar com as<br> gordurinhas localizadas</figcaption>
-					</figure>
-				</div>
-				<div class="col-lg-4 myDiv">
-					<figure>
-						<img src="assets/img/powershape/fig-3.png">
-						<figcaption>Redução<br> das celulites</figcaption>
-					</figure>
-				</div>
-				<a href="#contato" class="btn btn-verde myDiv">quero mais informações</a>
 			</div>
 		</div>
 	</section>
-	<section class="powershape-sessao-4 jarallax" id="contato" style="background: url(assets/img/powershape/fundo-3.jpg)no-repeat;background-size:cover;background-attachment: fixed;">
+	<section class="trilipo-sessao-5">
+		<div class="container">
+			<h2>3 em 1 para acabar com as gordurinhas!</h2>
+			<div class="row">
+				<div class="col-lg-4 myDiv">
+					<figure>
+						<img src="assets/img/trilipo/tr-1.png">
+						<figcaption>Reduz</figcaption>
+					</figure>
+				</div>
+				<div class="col-lg-4 myDiv">
+					<figure>
+						<img src="assets/img/trilipo/tr-2.png">
+						<figcaption>Remodela</figcaption>
+					</figure>
+				</div>
+				<div class="col-lg-4 myDiv">
+					<figure>
+						<img src="assets/img/trilipo/tr-3.png">
+						<figcaption>Tonifica</figcaption>
+					</figure>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="trilipo-sessao-4 jarallax" id="contato" style="background: url(assets/img/trilipo/fundo.png)no-repeat;background-size:cover;background-attachment: fixed;">
 		<div class="container">
 			<div class="row myDiv">
 				<div class="col-lg-12">
@@ -160,7 +171,7 @@
 		</div>
 	</section>
 
-	<footer class="powershape-footer">
+	<footer class="trilipo-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
