--- a/shockwave.html
+++ b/shockwave.html
@@ -35,7 +35,7 @@
 	<script src="assets/js/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-	<header class="top-banner no-padding hidden-xs hidden-sm" style="background: url(assets/img/shockwave/fundo.png) -25px -50px no-repeat;height: 52vh;overflow:hidden;background-color: transparent; width: 100%; z-index: 0; background-size: calc(100% + 130px); ">
+	<header class="top-banner no-padding hidden-xs hidden-sm" style="background: url(assets/img/shockwave/fundo.png) -25px -50px no-repeat;height: 500px;overflow:hidden;background-color: transparent; width: 100%; z-index: 0; background-size: calc(100% + 530px); ">
         <div class="container">
         	<div class="row">
         		<div class="col-lg-12">
@@ -98,7 +98,7 @@
 	</section>
 	<section class="shock-sessao-4" id="contato">
 		<div class="container">
-			<div class="row myDiv">
+			<div class="row">
 				<div class="col-lg-12">
 					<h2>Agende agora sua avaliação gratuita</h2>
 				</div>
@@ -150,7 +150,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<p> © Copyright 2018 - Onodera Estética</p>
+					<p>Onodera Estética - R. Muniz de Souza, 1272<br>
+					Aclimação, São Paulo<br>
+					CNPJ: 00.964.526/0001-91<br> 
+					Telefone: 11 3277 5585</p>
 				</div>
 			</div>
 		</div>
